--- a/src/components/enter-api-key.html
+++ b/src/components/enter-api-key.html
@@ -29,7 +29,7 @@
                             
                             if (data == "1") {
                                 localStorage.setItem("apiKey", apiKey);
-                                window.open("index.html", "_self");
+                                window.open("/contactbook/index.html", "_self");
                             } else {
                                 alert(data + "Invalid API key entered!");
                             }
