fixed broken paths

--- a/src/components/add-contact.html
+++ b/src/components/add-contact.html
@@ -4,7 +4,7 @@
     <title>Add Contact - Contact Book</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="public/css/style.css">
+    <link rel="stylesheet" href="../../public/css/style.css">
 </head>
 <body>
     <div class="page-container">
@@ -47,7 +47,7 @@
         </div>
     </div>
 
-    <script src="public/js/config.js"></script>
+    <script src="../../public/js/config.js"></script>
     <script>
         document.getElementById("submitForm").addEventListener("click", submitForm);
         document.getElementById("homeLink").addEventListener("click", homeLink);
