--- a/src/components/add-contact.html
+++ b/src/components/add-contact.html
@@ -92,7 +92,7 @@
         }
         
         function homeLink() {
-            window.location.href = "index.html";
+            window.open("../../index.html", "_self");
         }
     </script>
 </body>
